--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
-<html lang=”pt-br”>
+<html lang="pt-br">
 <head>
-<meta charset=”UTF-8”>
-<meta name=”viewport” content=”width=device-width, initial-
-scale=1.0”>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-
+scale=1.0">
 <title>Flashcard</title>
 </head>
 <body>
   <main>
-    <section id=”container”>
-      <article class=”cartao”>
-<div class=”cartao__conteudo”> </div>
+    <section id="container">
+      <article class="cartao">
+<div class="cartao__conteudo"> </div>
         <h3>Programação</h3>
-<div class=”cartao__conteudo__pergunta”>
+<div class="cartao__conteudo__pergunta">
 O que é JavaScript?
   </div>
-<div class=”cartao__conteudo__resposta”>
+<div class="cartao__conteudo__resposta">
 O JavaScript é uma linguagem de programação
+  <article class="cartao">
+<div class="cartao__conteudo">
+<h3>Programação</h3>
+<div class="cartao__conteudo__pergunta">
+O que é CSS?
+</div>
+<div class="cartao__conteudo__resposta">
+O CSS é uma linguagem de estilização.
 </div>
 </div>
 </article>
